Comment section fixes. Changed the rootMargin prop of isVisibleContainer

--- a/src/modules/VideoPage/components/video-comment/video-comment.module.scss
+++ b/src/modules/VideoPage/components/video-comment/video-comment.module.scss
@@ -24,5 +24,9 @@
 
 	&__comment {
 		@include paragraph-2-regular();
+
+		p {
+			word-break: break-word;
+		}
 	}
 }
